Code rationalisation and first part of implementing success and failure flags.